Several modifications:
* add function remove-user
* add cookie support
* small code refactor
* add services field in User
