# internal/swagger/api_v1.0.json
@@ -137,6 +137,16 @@
                 }
               }
             },
+            "401": {
+                "description": "Unauthorized access",
+                "content": {
+                  "application/json": {
+                    "schema": {
+                      "$ref": "#/components/schemas/Error"
+                    }
+                  }
+                }
+            },
             "default": {
               "description": "unexpected error",
               "content": {
@@ -248,6 +258,17 @@
                 "type": "string"
               },
               "description": "user access group"
+            },
+            "services": {
+              "type": "array",
+              "items": {
+                "type": "string",
+                "enum": [
+                  "remote"
+                ],
+                "example": "remote"
+              },
+              "description": "user services"
             }
           }
         },
@@ -271,6 +292,17 @@
                 "type": "string"
               },
               "description": "user access group"
+            },
+            "services": {
+              "type": "array",
+              "items": {
+                "type": "string",
+                "enum": [
+                  "remote"
+                ],
+                "example": "remote"
+              },
+              "description": "user services"
             }
           }
         },
